<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Serial Port API sample</string>
    <string name="about_msg">
Serial Port API sample v1.1\n
\n
This program is the sample application provided with project android-serialport-api.
\n
Frist using, you need setup the "device" and "bandrate",
and must ensure that the permission to open device.
\n

	</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>

    <string name="setup">Setup</string>
    <string name="console">Console</string>
    <string name="loopback">Loopback</string>
    <string name="send_01010101">Send 01010101</string>
    <string name="sending_01010101">Sending 01010101...</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    
    <string name="sent_bytes">Sent bytes</string>
    <string name="vol1">0</string>
    <string name="received_back">Received back</string>
    <string name="vol2">0</string>
    <string name="lost_bytes">Lost bytes</string>
    <string name="vol3">0</string>
    <string name="corrupted_bytes">Corrupted bytes</string>
    <string name="vol4">0</string>
    

</resources>